Add a canvas element

--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
             });
         </script>
     </head>
-    <body></body>
+    <body>
+        <canvas id="canvas" width="640" height="320"></canvas>
+    </body>
+    <style>
+        body {
+            min-height: 100vh;
+            display: grid;
+            place-items: center;
+            background-color: #222;
+        }
+        #canvas {
+            border: 8px solid cornflowerblue;
+        }
+    </style>
 </html>
